fix editDiv height and remove blocklyScrollbarHorizontal

--- a/blockscad/style.css
+++ b/blockscad/style.css
@@ -28,7 +28,7 @@ a:hover{
     border: 10;
     margin: 0;
     width: 100%;
-    height: 100%;
+    height: 450px !important;
     min-height: 100%;
     outline: none;
     z-index: 400;
@@ -79,9 +79,7 @@ a:hover{
 	right:  12px;
 	border: 1px solid #cccccc;
     width: 36%;
-    height: 80%;
-   /* width: 100%;
-    height: 100%;*/
+    height: 100%;
 }
 
 #renderDiv {
@@ -707,6 +705,9 @@ a.dropdown-toggle {
 }
 .blocklyToolboxDiv{
 	left:0 !important;
+}
+.blocklyScrollbarHorizontal{
+  display: none;
 }
 
 /*#renderButton, #zInButton, #zOutButton,
